--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -28,7 +28,7 @@ jobs:
       - name: push the new tag to GitHub
         run: |
           git config --global user.name 'Rig Automation'
-          git config --global user.email 'sinbad-io@users.noreply.github.com'
+          git config --global user.email "rig-bot@users.noreply.github.com"
           git add package.json
           git commit -am "upgraded version of rig npm package [skip ci]"
           git push
